# KmeansPreesm

./: .gitattributes  .gitignore  .project
Algo/Clustering/: cluster.diagram  cluster.pi  kmeans.diagram  kmeans.pi  kmeansalgorithm.diagram  kmeansalgorithm.pi  wholekmeans.diagram  wholekmeans.pi
Code/: CMakeGCC.sh  CMakeLists.txt
Code/dat/: Parameters.txt  assignedClusterFinal.txt  assignedClusterFinaloriginal.txt  clusterCentroid.txt  image.txt  readme.txt
Code/include/: kmeans.h  preesm.h  read_par_and_img.h  write_kmeans_results.h
Code/src/: kmeans.c  read_par_and_img.c  write_kmeans_results.c
Scenarios/: 1core.scenario  1corePapify.scenario  1coreSpider.scenario  4core.scenario  4corePapify.scenario  4corePapifyTiming.scenario  Codegen.workflow
Spider/: CMakeLists.txt  PAPI_info.xml
Spider/include/: eventLib.h  knn.h  memory.h  pca.h  preesm.h  read_HS_image.h  svm.h  utils.h  write_HS_results.h  x86.h
Spider/lib/spider/: libSpider.so.old
Spider/src/: eventLib.c  knn.cpp  pca.cpp  read_HS_image.cpp  svm.cpp  utils.cpp  write_HS_results.cpp
Workflows/: Codegen.layout  Codegen.workflow  CodegenPapify.workflow  CodegenPapifyComplete.workflow
